# ssg-waia-analysis

./: README.md  pyproject.toml
data/: Civic_Associations.geojson  README.md
docs/: 05_data.html  06_addresses.html  addresses_within_boundary.xlsx  index.html  parcels_within_boundary.xlsx  search.json  waia_map.html
docs/site_libs/bootstrap/: bootstrap-d72fd5da07fc3dae1f1ba14305f68bd2.min.css
reports/: 05_data.qmd  06_addresses.qmd  _quarto.yml  index.qmd
