[tool.poetry]
name = "ssg-waia-analysis"
version = "0.1.0"
description = ""
authors = ["John Leonard <john@lowkeylabs.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = ">=3.13,<4.0"
matplotlib = ">=3.10.3,<4.0.0"
plotly = ">=6.1.2,<7.0.0"
jupyter = ">=1.1.1,<2.0.0"
geopandas = ">=1.0.1,<2.0.0"
pandas = ">=2.2.3,<3.0.0"
folium = "^0.19.6"
openpyxl = "^3.1.5"
xlsxwriter = "^3.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
